# dogworld

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.claude/rules/: rule-one.md  rule-two.md
.claude/skills/dogworld/: SKILL.md
.github/workflows/: ci.yml
dogworld/: __init__.py  abduction.py  agent.py  arbiter.py  catalysis.py  circuit.py  engine.py  gate.py  heaven_agent.py  llm.py  macro.py  places.py  repair.py  rng.py  sdt.py  sop.py  stats.py  template_agent.py  world.py
dogworld/seams/: __init__.py  bigdog_persona.py  cave_bridge.py  cave_runtime.py  owl22python_adapter.py
dogworld/template/: __init__.py  owl22python.py  template_mixins.py  templated_class.py
examples/: calibration_bench.py  catalysis_demo.py  circuit_demo.py  curate_demo.py  hierarchy_demo.py  live_heaven_agent.py  live_macro.py  live_owl_dog_cave.py  live_places.py  live_skillshare.py  macro_demo.py  owl_dog.py  repair_demo.py  sdt_evolve.py  sop_demo.py  template_agent_demo.py
examples/world/forest/: place.md
examples/world/yard/: place.md
tests/: run_all.py  test_agent.py  test_catalysis.py  test_circuit.py  test_engine.py  test_gate.py  test_heaven_agent.py  test_llm_and_cave.py  test_macro.py  test_places.py  test_repair.py  test_sdt.py  test_seams.py  test_sop.py  test_template_agent.py  test_world.py
