[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dogworld"
version = "0.1.0"
description = "An abductive, soft-RNG, belief-gated agent-world engine (WISDOM = the calibration gate)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []                       # stdlib only — the core has zero deps
license = { text = "MIT" }

[project.optional-dependencies]
# seams reuse companion packages IF present; never required for the core
seams = ["cave-teams"]
# circuits: lift learned routes into composable UCO Chains (homoiconic, gated conduction)
circuits = ["universal-chain-ontology"]
# template: THE FOUNDATION — owl22python (OWL→agent) + the template mixins (vendored in dogworld/template/)
template = ["pydantic>=2", "jinja2>=3"]

[tool.setuptools.packages.find]
include = ["dogworld*"]
